--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,6 +27,15 @@
             "program": "models/lr_run_training.py",
             "console": "integratedTerminal",
             "justMyCode": true
+        },
+        {
+            "name": "Train Model from 1 year ago to 5 year ago",
+            "type": "python",
+            "request": "launch",
+            "program": "models/lr_run_training.py",
+            "args": ["0.95", "2018-02-01", "2022-02-01", "10"],
+            "console": "integratedTerminal",
+            "justMyCode": true
         }
     ]
 }
