--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,7 @@
             "type": "python",
             "request": "launch",
             "program": "backtester.py",
+            "args": ["2022-02-02", "2023-02-01"],
             "console": "integratedTerminal",
             "justMyCode": true
         },
@@ -33,7 +34,7 @@
             "type": "python",
             "request": "launch",
             "program": "models/lr_run_training.py",
-            "args": ["0.95", "2012-02-01", "2022-02-01", "21"],
+            "args": ["0.95", "2012-02-01", "2022-02-01", "10"],
             "console": "integratedTerminal",
             "justMyCode": true
         }
