--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,8 +9,8 @@
             "type": "python",
             "request": "launch",
             "program": "stockfinder_technical_breakout.py",
-            "args": ["--market", "HK", 
-                "--stock_list", "hsi_integrated_large", "hsi_integrated_medium", "hsi_integrated_small", "forex"
+            "args": ["--market", "JP", 
+                "--stock_list", "nikkei_225"
                ],
             "console": "integratedTerminal",
             "justMyCode": false
