--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,6 +26,18 @@
                 "--days_before_today_as_end", "0",],
             "console": "integratedTerminal",
             "justMyCode": false
+        },
+        {
+            "name": "Back Test Trend",
+            "type": "python",
+            "request": "launch",
+            "program": "backtester_technical_trend.py",
+            "args": ["--market", "JP", 
+                "--stock_list", "nikkei_225",
+                "--days_before_today_as_start", "1095",
+                "--days_before_today_as_end", "0",],
+            "console": "integratedTerminal",
+            "justMyCode": false
         }
     ]
 }
